Add reattach-to-user-namespace bindings

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -38,3 +38,5 @@ bind -r Left resize-pane -L 5
 bind -r Down resize-pane -D 5
 bind -r Up resize-pane -U 5
 bind -r Right resize-pane -R 5
+bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
+bind -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
