Prevent ; from being entered

--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -523,6 +523,7 @@ key_bindings:
 
   - { key: Semicolon, mods: Command|Shift, action: IncreaseFontSize }
   - { key: Minus,     mods: Command,       action: DecreaseFontSize }
+  - { key: Semicolon, mods: Control|Shift, action: None }
 
   - { key: Paste,                   action: Paste                            }
   - { key: Copy,                    action: Copy                             }
