--- a/.gitconfig
+++ b/.gitconfig
@@ -1,5 +1,5 @@
 [user]
-	email = hiokidaichi@gmail.com
+	email = hioki.daichi@gmail.com
 	name = Daichi Hioki
 [core]
 	excludesfile = ~/.gitignore_global
