--- a/cargo-atcoder.toml
+++ b/cargo-atcoder.toml
@@ -34,6 +34,10 @@ macro_rules! input_inner {
         let $var = read_value!($iter, $t);
         input_inner!{$iter $($r)*};
     };
+    ($iter:expr, mut $var:ident : $t:tt $($r:tt)*) => {
+        let mut $var = read_value!($iter, $t);
+        input_inner!{$iter $($r)*};
+    };
     ($iter:expr, ) => {};
 }
 
