--- a/.gitconfig
+++ b/.gitconfig
@@ -33,5 +33,5 @@
 	cmd = vim -f -c \"Gdiff\" \"$MERGED\"
 [ghq]
   root = ~/ghq
-[url "git@github.com:"]
-	insteadOf = https://github.com/
+# [url "git@github.com:"]
+# 	insteadOf = https://github.com/
