--- a/.ideavimrc
+++ b/.ideavimrc
@@ -27,6 +27,7 @@ nnoremap gr :action RenameElement<CR>
 nnoremap gs :action FileStructurePopup<CR>
 nnoremap gt :action Github.Open.In.Browser<CR>
 nnoremap gu :action FindUsages<CR>
+nnoremap gy :action CopyAbsolutePath<CR>
 nnoremap gx :action ToggleLineBreakpoint<CR>
 nnoremap g<CR> mzA;<ESC>`z
 nnoremap g<Space> :action Run<CR>
