--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,7 +1,5 @@
 set -g default-terminal "screen-256color"
 unbind C-b
-set -g prefix C-t
-bind C-t send-prefix
 set -g repeat-time 250
 set -sg escape-time 1
 set -g mode-keys vi
@@ -38,5 +36,5 @@ bind -r Left resize-pane -L 5
 bind -r Down resize-pane -D 5
 bind -r Up resize-pane -U 5
 bind -r Right resize-pane -R 5
-bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
-bind -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
+if-shell "uname | grep -q Darwin" "source-file ~/.tmux.conf.Darwin" ""
+if-shell "uname | grep -q Linux" "source-file ~/.tmux.conf.Linux" ""
