--- a/.tmux.conf
+++ b/.tmux.conf
@@ -36,5 +36,7 @@ bind -r Left resize-pane -L 5
 bind -r Down resize-pane -D 5
 bind -r Up resize-pane -U 5
 bind -r Right resize-pane -R 5
+bind -n C-S-Left swap-window -t -1\; select-window -t -1
+bind -n C-S-Right swap-window -t +1\; select-window -t +1
 if-shell "uname | grep -q Darwin" "source-file ~/.tmux.conf.Darwin" ""
 if-shell "uname | grep -q Linux" "source-file ~/.tmux.conf.Linux" ""
