--- a/.tmux.conf
+++ b/.tmux.conf
@@ -11,7 +11,7 @@ set -g status-right-length 90
 set -g status-left ""
 set -g window-status-format "#W"
 set -g window-status-current-format "#W"
-set -g status-right '#[fg=colour68] %Y-%m-%d (%a) %H:%M#[default]'
+set -g status-right ""
 set -g status-justify "centre"
 set -g status-style "bg=black, fg=colour245"
 setw -g window-status-style "bg=black, fg=colour245"
