--- a/.gitconfig
+++ b/.gitconfig
@@ -15,6 +15,7 @@
 	prompt = false
 [init]
   templatedir = ~/.git_template
+	defaultBranch = develop
 [pager]
 	log = diff-highlight | less
 	show = diff-highlight | less
@@ -23,11 +24,11 @@
 	diffFilter = diff-highlight
 [rebase]
 	autosquash = true
-[filter "lfs"]
-	clean = git-lfs clean -- %f
-	smudge = git-lfs smudge -- %f
-	process = git-lfs filter-process
-	required = true
+# [filter "lfs"]
+# 	clean = git-lfs clean -- %f
+# 	smudge = git-lfs smudge -- %f
+# 	process = git-lfs filter-process
+# 	required = true
 [mergetool "fugitive"]
 	cmd = vim -f -c \"Gdiff\" \"$MERGED\"
 [ghq]
@@ -38,3 +39,8 @@
 	rebase = false
 [log]
 	follow = true
+[filter "lfs"]
+	process = git-lfs filter-process
+	required = true
+	clean = git-lfs clean -- %f
+	smudge = git-lfs smudge -- %f
