--- a/.tmux.conf
+++ b/.tmux.conf
@@ -19,6 +19,8 @@ setw -g window-status-current-style "bg=black, fg=colour68"
 setw -g message-style "bg=black, fg=colour11"
 set -g pane-border-style "bg=black, fg=black"
 set -g pane-active-border-style "bg=black, fg=black"
+set-option -g focus-events on
+set-option -sa terminal-overrides ',screen-256color:RGB'
 bind C-"[" copy-mode
 bind C-] paste-buffer
 bind C-r source-file ~/.tmux.conf \; display "Reloaded!"
