--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,7 +1,6 @@
 set -g default-terminal "screen-256color"
 unbind C-b
 set -g repeat-time 250
-set -sg escape-time 1
 set -g mode-keys vi
 set -g base-index 1
 set -g pane-base-index 1
@@ -21,7 +20,7 @@ set -g pane-border-style "bg=black, fg=black"
 set -g pane-active-border-style "bg=black, fg=black"
 set-option -g focus-events on
 set-option -sa terminal-overrides ',screen-256color:RGB'
-bind C-"[" copy-mode
+bind-key C-[ copy-mode
 bind C-] paste-buffer
 bind C-r source-file ~/.tmux.conf \; display "Reloaded!"
 bind C-q confirm-before "kill-session"
@@ -40,5 +39,5 @@ bind -r Up resize-pane -U 5
 bind -r Right resize-pane -R 5
 bind -n C-S-Left swap-window -t -1\; select-window -t -1
 bind -n C-S-Right swap-window -t +1\; select-window -t +1
-if-shell "uname | grep -q Darwin" "source-file ~/.tmux.conf.Darwin" ""
-if-shell "uname | grep -q Linux" "source-file ~/.tmux.conf.Linux" ""
+set -g prefix C-t
+bind C-t send-prefix
