--- a/.tmux.conf
+++ b/.tmux.conf
@@ -20,7 +20,7 @@ set -g pane-border-style "bg=black, fg=black"
 set -g pane-active-border-style "bg=black, fg=black"
 set-option -g focus-events on
 set-option -sa terminal-overrides ',screen-256color:RGB'
-bind-key C-[ copy-mode
+bind C-[ copy-mode
 bind C-] paste-buffer
 bind C-r source-file ~/.tmux.conf \; display "Reloaded!"
 bind C-q confirm-before "kill-session"
@@ -37,7 +37,5 @@ bind -r Left resize-pane -L 5
 bind -r Down resize-pane -D 5
 bind -r Up resize-pane -U 5
 bind -r Right resize-pane -R 5
-bind -n C-S-Left swap-window -t -1\; select-window -t -1
-bind -n C-S-Right swap-window -t +1\; select-window -t +1
 set -g prefix C-t
 bind C-t send-prefix
