--- a/.tmux.conf
+++ b/.tmux.conf
@@ -20,12 +20,12 @@ set -g status-style "bg=black, fg=colour245"
 set -g pane-border-style "bg=black, fg=black"
 set -g pane-active-border-style "bg=black, fg=black"
 
-setw -g window-status-style "bg=black, fg=colour245"
-setw -g window-status-current-style "bg=black, fg=colour68"
-setw -g message-style "bg=black, fg=colour11"
-
 set-option -g focus-events on
 set-option -sa terminal-overrides ',screen-256color:RGB'
+
+set-window-option -g window-status-style "bg=black, fg=colour245"
+set-window-option -g window-status-current-style "bg=black, fg=colour68"
+set-window-option -g message-style "bg=black, fg=colour11"
 
 bind C-[ copy-mode
 bind C-] paste-buffer
@@ -36,6 +36,7 @@ bind C-p previous-window
 bind C-c new-window -c "#{pane_current_path}"
 bind C-s split-window -v -c "#{pane_current_path}"
 bind C-v split-window -h -c "#{pane_current_path}"
+
 bind -r C-h select-pane -L
 bind -r C-j select-pane -D
 bind -r C-k select-pane -U
