Change copy-mode binding

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -27,7 +27,7 @@ set-window-option -g window-status-style "bg=black, fg=colour245"
 set-window-option -g window-status-current-style "bg=black, fg=colour68"
 set-window-option -g message-style "bg=black, fg=colour11"
 
-bind C-[ copy-mode
+bind C-b copy-mode
 bind C-] paste-buffer
 bind C-r source-file ~/.tmux.conf \; display "Reloaded!"
 bind C-q confirm-before "kill-session"
