--- a/.gitconfig
+++ b/.gitconfig
@@ -4,7 +4,7 @@
 [core]
 	excludesfile = ~/.gitignore_global
 	whitespace = cr-at-eol
-	editor = /usr/local/bin/nvim
+	editor = nvim
 [diff]
 	tool = vimdiff
 [merge]
