--- a/.gitconfig
+++ b/.gitconfig
@@ -25,7 +25,7 @@
 [mergetool "fugitive"]
 	cmd = vim -f -c \"Gdiff\" \"$MERGED\"
 [ghq]
-  root = ~/ghq
+	root = ~/.rhq
 [pull]
 	rebase = false
 [log]
