--- a/.gitconfig
+++ b/.gitconfig
@@ -5,10 +5,18 @@
 	excludesfile = ~/.gitignore_global
 	whitespace = cr-at-eol
 	editor = nvim
+	pager = delta
+[interactive]
+	diffFilter = delta --color-only
+[delta]
+	navigate = true  # use n and N to move between diff sections
+	dark = true      # or light = true, or omit for auto-detection
+	line-numbers = true
+[merge]
+	conflictStyle = zdiff3
+	tool = fugitive
 [diff]
 	tool = vimdiff
-[merge]
-	tool = fugitive
 [mergetool]
 	prompt = false
 [init]
